lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:8: error: overloaded method value - with alternatives:
  (elem1: lessons.lander.universe.Point,elem2: lessons.lander.universe.Point,elems: lessons.lander.universe.Point*)scala.collection.mutable.Buffer[lessons.lander.universe.Point] <and>
  (elem: lessons.lander.universe.Point)scala.collection.mutable.Buffer[lessons.lander.universe.Point]
 cannot be applied to (Int)
  	for (i<- 0 to getSol()-2) {
                              ^